# tcrconvert

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  codecov.yml  demo.ipynb  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/workflows/: codecov.yml  github-actions.yml  pytest.yml  ruff.yml
docs/source/: api.rst  conf.py  contributing.rst  custom_species_cli.ipynb  custom_species_lib.ipynb  datahandling.rst  details.rst  faq.rst  functions.rst  getstarted.rst  index.rst  installation.rst  usage.ipynb  usage.rst  usage_cli.ipynb  usage_library.ipynb
examples/: example_human_10x.csv
tcrconvert/: __init__.py  build_lookup.py  cli.py  convert.py  utils.py
tcrconvert/data/: lookup.csv  trav.fa
tcrconvert/data/examples/: example_10x.csv
tcrconvert/data/human/: lookup.csv  lookup_from_adaptive.csv  lookup_from_tenx.csv  traj.fa  trav.fa  trbj.fa  trbv.fa
tcrconvert/data/macaque/: lookup.csv  lookup_from_tenx.csv
tcrconvert/data/mouse/: lookup.csv  lookup_from_adaptive.csv  lookup_from_tenx.csv
tcrconvert/data/rhesus/: lookup_from_adaptive.csv  lookup_from_tenx.csv
tcrconvert/examples/: adaptive.tsv  custom2adapt.tsv  custom2imgt.csv  customcols.csv  example_columns.csv  imgt.csv  tenx.csv  tenx2adapt.tsv  tenx2imgt.csv
tcrconvert/examples/converted/: imgt2tenx.csv  tenx2adapt.tsv  tenx2imgt.csv
tcrconvert/examples/fasta_dir/: lookup.csv  lookup_from_adaptive.csv  lookup_from_tenx.csv  test_trav.fa  test_trbv.fa
tcrconvert/tests/: test_build_lookup.py  test_convert.py
tcrconvert/tests/data/: lookup.csv  lookup_from_adaptive.csv  lookup_from_tenx.csv  test_traj.fa
tcrconverter/: build_lookup.py  convert.py  converter.ipynb
tcrconverter/data/: example_10x.csv  lookup.csv  traj.fa  trbv.fa
tcrconverter/tests/: test_build_lookup.py  test_convert.py  test_trav.fa
tcrconverter/tests/data/: lookup.csv
tests/: test_build_lookup.py  test_cli.py  test_convert.py
tests/data/: badinput.txt  test.fa
