[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcrconvert"
version = "1.0"
dependencies = ["pandas>=1.5.0", "click>=8.1.7", "platformdirs>=4.2.2"]
requires-python = ">= 3.9"
authors = [
  { name="Emma Bishop"},
  { email="emmab5@uw.edu"}
]
description = "Convert TCRs between 10X, Adaptive, and IMGT formats."
readme = "README.md"
license = {text = "MIT"}
keywords = ["TCR", "Adaptive", "10X", "IMGT", "T cell receptor", "T cell", "convert"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License",
  # Supported Python versions
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.urls]
Homepage = "https://tcrconvert.readthedocs.io/en/latest/"
Documentation = "https://tcrconvert.readthedocs.io/en/latest/"
Repository = "https://github.com/seshadrilab/tcrconvert.git"
Issues = "https://github.com/seshadrilab/tcrconvert/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tcrconvert*", "examples", "data"]
exclude = ["build*", "dist*", "*.egg-info*"]

[tool.setuptools.package-data]
tcrconvert = ["examples/**/*", "data/**/*"]

[project.scripts]
tcrconvert = "tcrconvert.cli:entry_point"

[project.optional-dependencies]
dev = [
    "coverage>=7.6.1",
    "pytest-cov>=5.0.0",
    "iniconfig>=2.0.0",
    "pluggy>=1.5.0",
    "pytest>=8.3.2"
    ]
docs = [
    "packaging>=21.0",
    "sphinx_rtd_theme>=2.0.0",
    "tomli>=2.0.1",
    "nbsphinx>=0.9.5",
    "ipython>=8.27.0",
    "ipykernel>=6.29.5"
    ]

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "single"